refactor: optimize and merge skills 41 to 34, rewrite descriptions for precise AI routing
Made-with: Cursor